--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,7 @@ website:
       - presentations.qmd
       - pubs.qmd
       - blog.qmd
+      - photos.qmd
       - icon: github
         href: https://github.com/inqs909/
         aria-label: GitHub repo
