--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,6 +27,8 @@ website:
       - icon: github
         href: https://github.com/inqs909/
         aria-label: GitHub repo
+      - aria-label: R-Universe
+        href: https://inqs909.r-universe.dev
 
 
 
